--- a/index.html
+++ b/index.html
@@ -848,9 +848,55 @@
             <span class="project-tag">PKL</span>
           </div>
         </div>
+        <div class="project">
+        <div class="project-image">
+          <img src="img/projek3.jpeg" alt="project">
+          <div class="project-overlay">
+            <span class="project-tag">PKL</span>
+          </div>
+        </div>
         <div class="project-content">
-          <h3>Jaringan FTTH</h3>
-          <p>Proyek ini merupakan dokumentasi progres kegiatan PKL yang berkaitan dengan jaringan FTTH (Fiber To The Home). Kegiatan yang dilakukan meliputi pengenalan alur kerja, pengamatan instalasi jaringan, serta pendampingan dalam proses penataan dan pengecekan jaringan sesuai prosedur yang berlaku.</p>
+          <h3>Perbaikan Kabel FO</h3>
+          <p>Project ini berisi pengalaman perbaikan kabel fiber optik yang terputus saat kegiatan lapangan. Fokus kegiatan adalah memastikan koneksi kembali normal dan stabil. Project ini menjadi bagian dari pembelajaran praktik jaringan.</p>
+        </div>
+      </div>
+    </div>
+      <div class="project">
+        <div class="project-image">
+          <img src="img/projek4.jpeg" alt="project">
+          <div class="project-overlay">
+            <span class="project-tag">PKL</span>
+          </div>
+        </div>
+        <div class="project-content">
+          <h3>Penggunaan Alat Plesing Fiber Optik</h3>
+          <p>Project ini mendokumentasikan penggunaan alat plesing untuk penyambungan kabel fiber optik. Kegiatan dilakukan untuk memastikan sambungan kabel berfungsi dengan baik dan stabil. Project ini menunjukkan pemahaman terhadap penggunaan alat kerja serta ketelitian dalam proses penyambungan jaringan.</p>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+        <div class="project-image">
+          <img src="img/projek5.jpeg" alt="project">
+          <div class="project-overlay">
+            <span class="project-tag">PKL</span>
+          </div>
+        </div>
+        <div class="project-content">
+          <h3>Penyesuaian Client pada Mikrotik dan OLT</h3>
+          <p>Project ini mendokumentasikan proses penyesuaian client agar dapat terhubung dengan baik antara perangkat Mikrotik dan OLT. Kegiatan dilakukan untuk memastikan koneksi jaringan berjalan stabil dan sesuai kebutuhan pengguna. Project ini menunjukkan pemahaman terhadap pengaturan dasar jaringan dan koordinasi antar perangkat.</p>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+        <div class="project-image">
+          <img src="img/projek6.jpeg" alt="project">
+          <div class="project-overlay">
+            <span class="project-tag">PKL</span>
+          </div>
+        </div>
+        <div class="project-content">
+          <h3>Pendataan Client Mikrotik Menggunakan Excel</h3>
+          <p>Project ini mendokumentasikan kegiatan pendataan client jaringan menggunakan Microsoft Excel untuk memudahkan pengelolaan pembayaran dan pencatatan kecepatan layanan. Data digunakan sebagai acuan dalam penyesuaian layanan jaringan pada Mikrotik. Project ini membantu meningkatkan kerapian administrasi dan kemudahan monitoring client.</p>
         </div>
       </div>
     </div>
