--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
         <div class="project-image">
           <img src="img/projek3.jpeg" alt="project">
           <div class="project-overlay">
-            <span class="project-tag">PKL</span>
+            <span class="project-tag">Perbaikan FO</span>
           </div>
         </div>
         <div class="project-content">
@@ -857,7 +857,7 @@
         <div class="project-image">
           <img src="img/projek4.jpeg" alt="project">
           <div class="project-overlay">
-            <span class="project-tag">PKL</span>
+            <span class="project-tag">Penggunaan Alat FTTH</span>
           </div>
         </div>
         <div class="project-content">
@@ -869,7 +869,7 @@
         <div class="project-image">
           <img src="img/projek5.jpeg" alt="project">
           <div class="project-overlay">
-            <span class="project-tag">PKL</span>
+            <span class="project-tag">Mikrotik & OLT</span>
           </div>
         </div>
         <div class="project-content">
@@ -881,7 +881,7 @@
         <div class="project-image">
           <img src="img/projek6.jpeg" alt="project">
           <div class="project-overlay">
-            <span class="project-tag">PKL</span>
+            <span class="project-tag">Client Mikrotik & Excel</span>
           </div>
         </div>
         <div class="project-content">
